--- a/widget/index.html
+++ b/widget/index.html
@@ -49,13 +49,17 @@
         <div class="event-calendar-holder clearfix">
           <div class="event-calendar">
             <div
-                ng-class="{'eventDateNew button span:after': !WidgetFeed.eventClassToggle}" ng-style="deviceWidth ? {'min-height': (9 * deviceWidth / 11) + 'px' }:{'min-height': (9 * 320 / 11) + 'px' }">
+                ng-class="{'eventDateNew button span:after': !WidgetFeed.eventClassToggle}" 
+                ng-style="deviceWidth ? {'min-height': (9 * deviceWidth / 11) + 'px' }:{'min-height': (9 * 320 / 11) + 'px' }">
               <datepicker ng-model="dt" show-weeks="false" max-mode="day"
                           ng-if="WidgetFeed.eventsAll"
                           class="calendar-day" show-year="false"
                           custom-class="getDayClass(date, mode)"
                           ng-click="WidgetFeed.getEventDate(dt)">
               </datepicker>
+            </div>
+            <div style="text-align: center;margin-bottom: 3px;">
+              <button type="button" class="btn btn-success btn-sm" ng-click="WidgetFeed.resetCalendar()">All Events</button>
             </div>
             <div class="event-list">
               <div ng-if="WidgetFeed.data && WidgetFeed.events">
