--- a/widget/index.html
+++ b/widget/index.html
@@ -87,7 +87,7 @@
                       <a href="javascript:void(0)"
                          ng-click="WidgetFeed.openDetailsPage(event,$index)"><h4
                           class="margin-bottom-zero text-primary ellipsis">
-                        {{ event.SUMMARY || event.DESCRIPTION}}</h4></a>
+                        {{ event.SUMMARY || event.DESCRIPTION | decodeIcalComponent }}</h4></a>
 
                       <p class="margin-zero ellipsis"
                          ng-if="event.endDate && !event.isAllDay">{{event.tmpStartDate||event.startDate |
