--- a/widget/index.html
+++ b/widget/index.html
@@ -68,7 +68,7 @@
                        ng-swipe-left="WidgetFeed.addEvents($event, $index, false)"
                        custom-class="getDayClass(date, mode)"
                        ng-class="{'active' : WidgetFeed.swiped[$index]}"
-                       ng-repeat="event in WidgetFeed.events track by event.UID">
+                       ng-repeat="event in WidgetFeed.events track by event.trackingId">
                     <div class="calendar-icon text-center bg-primary"
                          ng-click="WidgetFeed.addEventsToCalendar(event, $index)">
                       <span class="icon icon-calendar-check"></span>
